# src/CallServer/model/callMetadata.go
@@ -4,8 +4,7 @@ import "time"
 
 type CallMetadata struct {
 	tableName             struct{}          `pg:"callws.call_metadata"`
-	StartTime             time.Time         `pg:"start_time,pk"`
-	EndTime               time.Time         `pg:"end_time,pk"`
+	Day                   time.Time         `pg:"day,pk"`
 	TotalInboundDuration  uint32            `pg:"total_inbound_duration,use_zero"`
 	TotalOutboundDuration uint32            `pg:"total_outbound_duration,use_zero"`
 	TotalCalls            uint32            `pg:"total_calls,use_zero"`
@@ -15,11 +14,11 @@ type CallMetadata struct {
 }
 
 type MetadataQueryResult struct {
-	StartTime time.Time `pg:"start_time"`
-	Caller    string    `pg:"caller"`
-	Callee    string    `pg:"callee"`
-	Inbound   bool      `pg:"inbound"`
-	Count     uint16    `pg:"count"`
-	Duration  uint16    `pg:"total_duration"`
-	Cost      uint32    `pg:"total_cost"`
+	Day      time.Time `pg:"day"`
+	Caller   string    `pg:"caller"`
+	Callee   string    `pg:"callee"`
+	Inbound  bool      `pg:"inbound"`
+	Count    uint16    `pg:"count"`
+	Duration uint16    `pg:"total_duration"`
+	Cost     uint32    `pg:"total_cost"`
 }
